add todo list project

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         </div>
         <div class="w-full px-4 lg:w-1/2">
           <div class="mt-10 relative lg:mt-9">
-            <img src="./dist/img/muhammadZulkifli.png" alt="Muhammad Zulkifli" class="max-w-sm mx-auto rounded-b-[4rem]">
+            <img src="./dist/img/muhammadZulkifli.png" alt="Muhammad Zulkifli"
+              class="max-w-sm mx-auto rounded-b-[4rem]">
             <span class="absolute bottom-20 -z-10 left-1/2 -translate-x-1/2">
               <svg width="450" height="450" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                 <path fill="oklch(70.4% 0.14 182.503)"
@@ -169,11 +170,17 @@
       <div class="w-full px-4 flex flex-wrap justify-center">
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
-            <img src="./dist/img/masihBelumAda.png" alt="Baru portofolio" width="100%">
+            <img src="./dist/img/todoList.png" alt="todo list" width="100%">
           </div>
-          <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">Sedang proses belajar🗿</h3>
-          <p class="font-[400] leading-relaxed tracking-wide text-slate-800 text-justify">Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Ex, itaque iure? Magnam tenetur minus consectetur!</p>
+          <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-2">Todo List</h3>
+          <p class="font-[400] leading-relaxed tracking-wide text-slate-800 text-justify">Aplikasi manajemen tugas
+            sederhana yang saya kembangkan untuk membantu pengguna mencatat, mengatur, dan menyelesaikan aktivitas
+            harian mereka.
+          </p>
+          <a href="https://revou-coding-camp.github.io/codingcamp-7-jul-25-maze014/" target="_blank">
+            <button type="submit"
+              class="px-5 py-2 bg-cyan-700 text-white text-xl font-semibold rounded-full tracking-wider mt-3 focus:ring-2 focus:ring-cyan-400">Visit</button>
+          </a>
         </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
