--- a/index.html
+++ b/index.html
@@ -184,11 +184,17 @@
         </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
-            <img src="./dist/img/masihBelumAda.png" alt="Baru portofolio" width="100%">
+            <img src="./dist/img/kalkulator.png" alt="kalkulator" width="100%">
           </div>
-          <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">Sedang proses belajar🗿</h3>
-          <p class="font-[400] leading-relaxed tracking-wide text-slate-800 text-justify">Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Ex, itaque iure? Magnam tenetur minus consectetur!</p>
+          <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">Kalkulator Sederhana</h3>
+          <p class="font-[400] leading-relaxed tracking-wide text-slate-800 text-justify">Project ini merupakan aplikasi
+            kalkulator digital yang saya kembangkan untuk memperkuat pemahaman tentang logika pemrograman dan antarmuka
+            pengguna (UI). Kalkulator ini mampu melakukan operasi dasar seperti penjumlahan, pengurangan, perkalian, dan
+            pembagian.</p>
+          <a href="https://maze014.github.io/kalkulator/" target="_blank">
+            <button type="submit"
+              class="px-5 py-2 bg-cyan-700 text-white text-xl font-semibold rounded-full tracking-wider mt-3 focus:ring-2 focus:ring-cyan-400">Visit</button>
+          </a>
         </div>
       </div>
     </div>
